result out animation removed

--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -7,7 +7,7 @@
 </div>
 
 
-<div *ngIf="showresults&&searchJson" [@resultOut]="!myVar"  class="container">
+<div *ngIf="showresults&&searchJson"   class="container">
 
 
   <button class="btn" [disabled]="!isDetailSearchPerformed"
