--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -36,7 +36,7 @@
       <img src="{{row.galleryURL[0]}}" class="wishImage">
       </a>
     </td>
-    <td *ngIf="row.galleryURL[0]==undefined">N/A</td>
+    <td *ngIf="row.galleryURL==undefined||row.galleryURL[0]==undefined">N/A</td>
     <td><a href="#" data-toggle="tooltip" placement="bottom" ngbTooltip="{{row.title}}" (click)="callWishProduct(row.itemId[0],row.title,row)">{{  row.title == null ? 'N/A' : (row.title.toString().length > 50 ? (row.title.toString().substring(0, 50).slice(-1) == ' ' ? (row.title.toString().substring(0, 50) + '...') : (row.title.toString().substring(0, (row.title.toString().substring(0, 50).lastIndexOf(' '))) + '...')) : row.title.toString())}}</a></td>
 
     <td *ngIf="row.sellingStatus==undefined||row.sellingStatus[0]==undefined||row.sellingStatus[0].currentPrice[0]==undefined">
