wishlist button click fixed

--- a/src/app/prod-details/prod-details.component.html
+++ b/src/app/prod-details/prod-details.component.html
@@ -20,8 +20,8 @@
 
   </button>
     <div *ngIf="!prodSet.has(currentRow.itemId[0])" class="float-right" style="margin-left: 5px">
-      <button class="btn btn-light" id="bck1" >
-        <i class="material-icons float-right" *ngIf="!prodSet.has(currentRow.itemId[0])" (click)="callWish()">
+      <button class="btn btn-light" id="bck1"  *ngIf="!prodSet.has(currentRow.itemId[0])" (click)="callWish()">
+        <i class="material-icons float-right">
           add_shopping_cart
         </i>
       </button>
@@ -29,8 +29,8 @@
     <!--</button>-->
     <!--<button class="btn btn-light">-->
     <div *ngIf="prodSet.has(currentRow.itemId[0])" style="float: right;margin-left: 5px">
-      <button class="btn btn-light" style="float: right" id="bck2">
-        <i class="material-icons float-right" style="color: gold" *ngIf="prodSet.has(currentRow.itemId[0])" (click)="removeWish()">
+      <button class="btn btn-light" style="float: right" id="bck2" *ngIf="prodSet.has(currentRow.itemId[0])" (click)="removeWish()">
+        <i class="material-icons float-right" style="color: gold" >
           remove_shopping_cart
         </i>
       </button>
