wishlist button click fixed

--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -59,8 +59,8 @@
 
     <td>{{row.sellerInfo[0].sellerUserName[0]}}</td>
     <td>
-      <button class="btn btn-light">
-      <i class="material-icons" style="color: gold" (click)="removeFromTable(row)">
+      <button class="btn btn-light" (click)="removeFromTable(row)">
+      <i class="material-icons" style="color: gold" >
 
 
         remove_shopping_cart
